Importación las librerias necesarias

--- a/Bismark_Castro_Regresion.ipynb
+++ b/Bismark_Castro_Regresion.ipynb
@@ -3,10 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b487053",
+   "id": "8f67cf77",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib notebook\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy import stats\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "%matplotlib inline\n",
+    "import sklearn.datasets as dt"
+   ]
   }
  ],
  "metadata": {
